# Mario

./: .coverage  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  DEPENDANCES.md  LLM_INTEGRATION_STATUS.md  OPTIMISATION_GPU.md  PLAN_AMÉLIORATION.md  PULL_REQUEST.md  README.md  TESTS_PERFORMANCE.md  TEST_PROGRESS.md  TODO.md  check_voice.py  cleanup_repo.py  config.yaml  coverage.json  coverage_output.txt  coverage_summary.txt  index.html  mario_models_verbose.txt  mkdocs.yml  prompts.json  pyproject.toml  pytest.ini  requirement.txt  requirements.txt  results2.txt  results3.txt  results_final.txt  run.py  test-results.txt  test_llm_system_info.py  test_tts.py
.github/workflows/: docs.yml  lint.yml  ollama-test.yml  opencode.yml  tests.yml
conversations/: history.json
docs/: api.md  index.md  installation.md
docs/architecture/: 1-mvc-overview.md  (+2 more)
scripts/: demo_llm_monitoring.py  fix_logs.py  run_tests.py  test_llm_detection.py
src/: TODO.md  config.py  factory.py  main.py
tests/: __init__.py  conftest.py  fake_recognizer.py  test_analysis_manager.py  test_audio_player.py  test_conversation_service.py  test_dummy_audio_input.py  test_file_analyze.py  test_imports.py  test_interface.py  test_interface_chat.py  test_interface_helpers.py  test_llm_client.py  test_llm_service.py  test_service_orchestration.py  test_speech_recognition.py  test_speech_recognition_service.py  test_system_monitor.py  test_text_to_speech.py  test_tts_service.py  test_voice_command.py  test_wake_word_detector.py  test_wake_word_service.py  test_web_interface_gradio.py
(+151 files in other folders)
