[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assistant-vocal-intelligent"
version = "0.1.0"
description = "Un assistant vocal local en Python, capable d’écouter, transcrire, répondre et parler grâce à des modèles OpenAI Whisper, Piper TTS et Gradio."
authors = [
    {name = "Jean Marc RENAUD", email = "votre-email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=1.13.0",
    "openai-whisper>=20231106",
    "piper-tts>=1.2.0",
    "onnxruntime>=1.16.0",
    "webrtcvad>=2.0.10",
    "pyaudio>=0.2.11",
    "pvrecorder>=1.1.1",
    "librosa>=0.9.0",
    "soundfile>=0.12.1",
    "scipy>=1.10.0",
    "numba>=0.57.0",
    "numpy>=1.21.0",
    "gradio>=4.0.0",
    "flask>=3.0.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
    "tqdm>=4.65.0",
    "typing-extensions>=4.8.0",
    "dataclasses-json>=0.6.3",
    "colorlog>=6.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools]
packages = ["assistant_vocal"]
